--- a/views/index.slim
+++ b/views/index.slim
@@ -1,4 +1,4 @@
-h1
+h1 MyDeadlines Please Login
 div
     form action="/login" method="post"
         input type="text" placeholder="Gib usrname" name="username"
@@ -17,4 +17,4 @@ a href="/newuser"
     a href="/logout"
         button Logout
 - else
-    p not logged in
+    p not logged in 
